--- a/src/app/forms/showroom/showroom.component.html
+++ b/src/app/forms/showroom/showroom.component.html
@@ -1,9 +1,22 @@
 <div class="row">
   <div class="col-md-12">
     
-    <h2>Form Results</h2>
+    <h2>Basic Elements Examples and Gallery</h2>
 
-    <h3>Form values in JSON</h3>
+    <ul>
+      <li>Radios</li>
+      <li>Checkboxes</li>
+      <li>Select
+        <ul>
+          <li>Multiple</li>
+          <li>Simple</li>
+        </ul>
+      </li>
+    </ul>
+
+    <hr>
+
+    <h3>JSON Output</h3>
     <div class="well">
       {{getJSON()}}
     </div>
