market-co component

--- a/src/app/form-elements/extended/market-company/market-company.component.html
+++ b/src/app/form-elements/extended/market-company/market-company.component.html
@@ -3,7 +3,7 @@
         <h4>Market Company:</h4>
     </div>
     <div class="col-right">
-        <market-co></market-co><br/>
+        <market-co></market-co>
         <local-policies></local-policies>
     </div>
 </div>
