us-exposed widget

--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -7,7 +7,7 @@
 <countries></countries>
 <lobs></lobs>
 <company-type></company-type>
-<p>us exposed</p>
+<us-exposed></us-exposed>
 <market-company></market-company>
 <p>opeartions type</p>
 <p>business type</p>
