--- a/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
+++ b/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
@@ -11,7 +11,7 @@
 <lobs></lobs>
 <company-type></company-type>
 <primary-excess></primary-excess>
-<p>us exposed</p>
+<us-exposed></us-exposed>
 <p>opeartions type</p>
 <p>business type</p>
 <run-report></run-report>
