gross written premium report

--- a/src/app/forms/gross-written-premium/gross-written-premium.component.html
+++ b/src/app/forms/gross-written-premium/gross-written-premium.component.html
@@ -5,9 +5,10 @@
 <p>widget date</p>
 <offices></offices>
 <regions-set></regions-set>
+<regions></regions>
 <countries></countries>
 <company-type></company-type>
-<p>market company</p>
+<market-company></market-company>
 <p>operations type</p>
 <p>business type</p>
 <run-report></run-report>
