business and operations

--- a/src/app/form-elements/extended/business/business.component.html
+++ b/src/app/form-elements/extended/business/business.component.html
@@ -1,3 +1,6 @@
-<p>
-  business works!
-</p>
+<div class="fieldset">
+  <div class="col-left">
+    <h4>Business Type:</h4>
+  </div>
+  <div class="col-right"></div>
+</div>
