--- a/src/app/form-elements/extended/operations/operations.component.html
+++ b/src/app/form-elements/extended/operations/operations.component.html
@@ -1,3 +1,6 @@
-<p>
-  operations works!
-</p>
+<div class="fieldset">
+  <div class="col-left">
+    <h4>Operations Type:</h4>
+  </div>
+  <div class="col-right"></div>
+</div>
