--- a/src/app/forms/broker-meeting/broker-meeting.component.html
+++ b/src/app/forms/broker-meeting/broker-meeting.component.html
@@ -12,6 +12,6 @@
 <countries></countries>
 <lobs></lobs>
 <company-type></company-type>
-<p>operations type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
