business and operations in forms

--- a/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
+++ b/src/app/forms/fac-out-portfolio/fac-out-portfolio.component.html
@@ -9,6 +9,6 @@
 <company-type></company-type>
 <us-exposed></us-exposed>
 <market-company></market-company>
-<p>opeartions type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
