--- a/src/app/forms/gross-written-premium/gross-written-premium.component.html
+++ b/src/app/forms/gross-written-premium/gross-written-premium.component.html
@@ -9,6 +9,6 @@
 <countries></countries>
 <company-type></company-type>
 <market-company></market-company>
-<p>operations type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
