--- a/src/app/forms/monthly-comparison/monthly-comparison.component.html
+++ b/src/app/forms/monthly-comparison/monthly-comparison.component.html
@@ -11,6 +11,6 @@
 <uw></uw>
 <lobs></lobs>
 <company-type></company-type>
-<p>operations</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
