--- a/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
+++ b/src/app/forms/portfolio-analysis-report/portfolio-analysis-report.component.html
@@ -12,6 +12,6 @@
 <company-type></company-type>
 <primary-excess></primary-excess>
 <us-exposed></us-exposed>
-<p>opeartions type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
