--- a/src/app/forms/underwriting-activity/underwriting-activity.component.html
+++ b/src/app/forms/underwriting-activity/underwriting-activity.component.html
@@ -11,6 +11,6 @@
 <lobs></lobs>
 <primary-excess></primary-excess>
 <company-type></company-type>
-<p>operations type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <run-report></run-report>
