--- a/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
+++ b/src/app/forms/submission-volume-overview/submission-volume-overview.component.html
@@ -7,8 +7,8 @@
 <uws></uws>
 <lobs></lobs>
 <company-type></company-type>
-<p>operations type</p>
-<p>business type</p>
+<operations></operations>
+<business></business>
 <p>submissions count received 3-7 years checkbox</p>
 <run-report></run-report>
 <button (click)="getJson()">GetJSON</button>
