--- a/src/app/form-elements/core/select/select.component.html
+++ b/src/app/form-elements/core/select/select.component.html
@@ -1,5 +1,5 @@
 <div class="form-group">
-  <button class="btn btn-default btn-xs" (click)="toggle()" *ngIf="multiple" >{{getButtonText()}}</button>
+  <button *ngIf="hasSelectAllButton" class="btn btn-default btn-xs" (click)="toggle()" *ngIf="multiple" >{{getButtonText()}}</button>
   <select [class]="'form-control ' + classes" [multiple]="multiple" [(ngModel)]="selectedValues" (change)=updateValues()>
     <option *ngIf="isAnySelected()">Select One</option>
     <option *ngFor="let value of getValues()" 
