--- a/src/app/form-elements/extended/business/business.component.html
+++ b/src/app/form-elements/extended/business/business.component.html
@@ -6,6 +6,6 @@
     <div>
       <button [ngClass]="getClasses(set)" *ngFor="let set of getSets()" (click)="updateSelectedSet(set)">{{set}}</button>
     </div>
-    <my-select *ngIf="isVisibleSelect()" [hasSelectAllButton]="false" [class.highlighted]="highlighted" [fieldset]="data" multiple="true" [classes]="'wide'"></my-select>
+    <my-select [style.display]="(isVisibleSelect()) ? 'block': 'none'" [hasSelectAllButton]="false" [class.highlighted]="highlighted" [fieldset]="data" multiple="true" [classes]="'wide'"></my-select>
   </div>
 </div>
