--- a/src/app/form-elements/extended/operations/operations.component.html
+++ b/src/app/form-elements/extended/operations/operations.component.html
@@ -6,6 +6,6 @@
     <div>
       <button [ngClass]="getClasses(set)" *ngFor="let set of getSets()" (click)="updateSelectedSet(set)">{{set}}</button>
     </div>
-    <my-select [hasSelectAllButton]="false" [class.highlighted]="highlighted" [fieldset]="data" multiple="true" [classes]="'wide'"></my-select>
+    <my-select [style.display]="(isVisible() ? 'block' : 'none')" [hasSelectAllButton]="false" [class.highlighted]="highlighted" [fieldset]="data" multiple="true" [classes]="'wide'"></my-select>
   </div>
 </div>
