--- a/src/app/forms/showroom2/showroom2.component.html
+++ b/src/app/forms/showroom2/showroom2.component.html
@@ -1,84 +1,127 @@
-<h3>Dates</h3>
-<p>Date widget missing</p>
-<hr>
+<p-tabView>
+    <p-tabPanel header="Dates">
+        <h3>Dates</h3>
+        <p>Date widget missing</p>
+        <hr>
+    </p-tabPanel>
 
-<h3>Reporting Figures</h3>
+    <p-tabPanel header="Reporting Figures">
+        <h3>Reporting Figures</h3>
 
-<h4>HTML</h4>
-<div class="well">
-    &lt;reporting-figures&gt;&lt;/reporting-figures&gt;
-</div>
+        <h4>HTML</h4>
+        <div class="well">
+            &lt;reporting-figures&gt;&lt;/reporting-figures&gt;
+        </div>
 
-<h4>Example</h4>
-<reporting-figures></reporting-figures>
+        <h4>Example</h4>
+        <reporting-figures></reporting-figures>
 
-<hr>
+        <hr>
+    </p-tabPanel>
 
-<h3>Type of View</h3>
+    <p-tabPanel header="Type of View">
+        <h3>Type of View</h3>
 
-<h4>HTML</h4>
-<div class="well">
-&lt;type-of-view&gt;&lt;/type-of-view&gt;    
-</div>
+        <h4>HTML</h4>
+        <div class="well">
+            &lt;type-of-view&gt;&lt;/type-of-view&gt;
+        </div>
 
-<h4>Example</h4>
-<type-of-view></type-of-view>
+        <h4>Example</h4>
+        <type-of-view></type-of-view>
 
-<hr>
+        <hr>
+    </p-tabPanel>
 
-<h3>Offices</h3>
-<offices></offices>
-<hr>
+    <p-tabPanel header="Offices">
+        <h3>Offices</h3>
+        <offices></offices>
+        <hr>
+    </p-tabPanel>
 
-<h3>Regions Set</h3>
-<regions-set></regions-set>
-<hr>
+    <p-tabPanel header="Regions Set">
+        <h3>Regions Set</h3>
+        <regions-set></regions-set>
+        <hr>
+    </p-tabPanel>
 
-<h3>Regions</h3>
-<regions></regions>
-<hr>
+    <p-tabPanel header="Regions">
+        <h3>Regions</h3>
+        <regions></regions>
+        <hr>
 
-<h3>Countries</h3>
-<countries></countries>
-<hr>
+    </p-tabPanel>
+    <p-tabPanel header="Countries">
+        <h3>Countries</h3>
+        <countries></countries>
+        <hr>
 
-<h3>UW</h3>
-<uw></uw>
-<hr>
+    </p-tabPanel>
+    <p-tabPanel header="UW">
 
-<h3>lobs</h3>
-<lobs></lobs>
-<hr>
 
-<h3>Primary-Excess</h3>
-<primary-excess></primary-excess>
-<hr>
+        <h3>UW</h3>
+        <uw></uw>
+        <hr>
 
-<h3>CompanyType</h3>
-<company-type></company-type>
-<hr>
+    </p-tabPanel>
 
-<h3>Operations Type</h3>
-<p>Operations Type missing</p>
-<hr>
+    <p-tabPanel header="lobs">
+        <h3>lobs</h3>
+        <lobs></lobs>
+        <hr>
+    </p-tabPanel>
 
-<h4>Business Type</h4>
-<p>Business Type missing</p>
-<hr>
+    <p-tabPanel header="Primary Excess">
+        <h3>Primary-Excess</h3>
+        <primary-excess></primary-excess>
+        <hr>
+    </p-tabPanel>
 
-<h4>Run Report Button</h4>
-<run-report></run-report>
+    <p-tabPanel header="Company Type">
+        <h3>CompanyType</h3>
+        <company-type></company-type>
+        <hr>
+    </p-tabPanel>
 
-<hr>
+    <p-tabPanel header="Opeations Type">
+        <h3>Operations Type</h3>
+        <p>Operations Type missing</p>
+        <hr>
+    </p-tabPanel>
 
-<h4>Events</h4>
+    <p-tabPanel header="Business Type">
 
-<h3>Get JSON</h3>
-<button (click)="getJson()">Update JSON</button><p>{{json}}</p>
+        <h4>Business Type</h4>
+        <p>Business Type missing</p>
+        <hr>
+    </p-tabPanel>
 
-<h3>Refresll Data from the Server</h3>
-<button (click)="forceRefresh()">Refresh All</button>
+    <p-tabPanel header="Run Report Button">
 
-<h3>Validation Widget</h3>
-<button (click)="validate()">Validate</button>
-<form-error [errorMessages]="errorMessages" (hovering)="getHover($event)"></form-error>
+        <h4>Run Report Button</h4>
+        <run-report></run-report>
+
+        <hr>
+
+    </p-tabPanel>
+
+    <p-tabPanel header="Events">
+        <h4>Events</h4>
+
+        <h3>Get JSON</h3>
+        <button (click)="getJson()">Update JSON</button>
+        <p>{{json}}</p>
+
+        <h3>Refresll Data from the Server</h3>
+        <button (click)="forceRefresh()">Refresh All</button>
+    </p-tabPanel>
+    <p-tabPanel header="Form Errors Container">
+        <h3>Validation Widget</h3>
+        <button (click)="validate()">Validate</button>
+        <form-error [errorMessages]="errorMessages" (hovering)="getHover($event)"></form-error>
+    </p-tabPanel>
+
+    <p-tabPanel header="Empty"></p-tabPanel>
+    
+</p-tabView>
